--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "curl -L --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && rustup target add wasm32-unknown-unknown && curl -L --proto '=https' --tlsv1.2 -sSf https://trunk-rs.org/downloads/install.sh | sh && ./trunk build --release"
+  command = "curl -L --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && rustup target add wasm32-unknown-unknown && curl -L https://github.com/trunk-rs/trunk/releases/download/v0.19.3/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf - && ./trunk build --release"
   publish = "dist"
 
 [[redirects]]
