--- a/Trunk.toml
+++ b/Trunk.toml
@@ -1,7 +1,7 @@
 [build]
 target = "index.html"
 dist = "dist"
-public_url = "/"
+public_url = "/easy_stat_r/"
 
 [watch]
 ignore = ["./.git", "./target"]
